--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -96,7 +96,7 @@ We will assume that the left and right protons are independent in the background
 
 We consider these distributions as functions of $t$'s only since we are investigating the background to elastic scattering. Elastic protons have $\xi\equiv 0$ by definition, therefore only $t_x$ and $t_y$ are reconstructed. The same applies to inelastic protons that pass the elastic-event selection as background events. Their $\xi$ distribution is absorbed to an effective $t_x$ and $t_y$ distribution.
 
-Moreover, on the level of one station $t_x$ ($t_y$) is reconstructed from $x$ ($y$) hit positions at the station, thus one could think of $t_x$ and $t_y$ as an alternative hit position description. In particular, the acceptance function expressed in $t_x$ and $t_y$ is as simple as in $x$ and $y$ -- it is merely $\Th(|t_y| > |t_y|_{\rm min})$. \footnote{%
+Moreover, on the level of one station $t_x$ ($t_y$) is reconstructed from $x$ ($y$) hit positions at the station, thus one could think of $t_x$ and $t_y$ as an alternative hit position description. In particular, the acceptance function expressed in $t_x$ and $t_y$ is as simple as in $x$ and $y$ -- it is merely $\Th(|t_y| > |t_y|_{\rm min})$.\footnote{%
 We will use the symbol $\Th$ for a function that has value 1 if the condition in parentheses is fulfilled and is 0 otherwise.
 }
 
@@ -180,7 +180,7 @@ Taking the data from \Fg{felm background cmp} right, one can subtract the backgr
 
 \section[felm unfold]{Unfolding}
 
-The scattering angles $\th_x'$ and $\th_y'$ \footnote{
+The scattering angles $\th_x'$ and $\th_y'$ \footnote{%
 In this section we will always mean the physics scattering angles (i.e.~at the interaction point, see \Sc{rp measurement}). To meet our notation from \Sc{rp measurement} we should use star superscripts $^*$, however this would lead to expressions graphically too heavy and thus we will drop them in this section. Moreover, we will use our traditional distinction between measured/reconstructed (with prime) and true/original (without primes) quantities.
 } are reconstructed by taking the average over the two one-arm measurements (cf.~\Eq{felm xy reco}):
 \eqref{\th_x' \equiv {\th_x^{\rm L} + \th_x^{\rm R}\over 2} = \th_x + \De\th_x}{felm unf th err}
