--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -165,6 +165,16 @@
       year           = "1976"
 }
 
+@Article{islam84,
+      author         = "ISLAM, M. M., FEARNLEY, T. and GUILLAUD, J. P.",
+      title          = "$\bar pp$ and $pp$ elastic scattering from $10\,GeV$ to $1000\,GeV$ center-of-mass energy",
+      journal        = "Nuovo Cim.",
+      volume         = "A81",
+      pages          = "737",
+      doi            = "10.1007/BF02724225",
+      year           = "1984",
+}
+
 @Article{islam87,
 		author="ISLAM, M. M., INNOCENTE V., FEARNLEY T. and SANGUIETTI, G.",
 		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
@@ -182,18 +192,18 @@
 		number="11",
 		year="2003",
 		pages="743--752"
-}	
+}
+
+@Article{islam05,
+      author         = "ISLAM, M. M., LUDDY, R. J. and PROKUDIN, A. V.",
+      title          = "$pp$ elastic scattering at LHC in near forward direction",
+      journal        = "Phys. Lett.",
+      volume         = "B605",
+      pages          = "115-122",
+      doi            = "10.1016/j.physletb.2004.11.006",
+      year           = "2005",
+}
     
-
-@Article{islam04,
-		author="ISLAM, M. M., LUDDY, R. J. and PROKUDIN, A. V.",
-		title="pp elastic scattering at LHC in near forward direction",
-		journal="Phys. Lett.",
-		volume="B605",
-		year="2005",
-		pages="115--122"
-}    
-
 % the review
 @Article{islam06,
 	 author="ISLAM, M. M., LUDDY, R. J. and PROKUDIN, A. V.",
