--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,7 +18,7 @@
 \Reftrue
 \Toctrue
 
-\iftrue
+\iffalse
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1.5cm
 \else
@@ -77,8 +77,7 @@ First of all, I would like to thank my advisors Vojtěch Kundrát (for the theor
 
 I would like thank to the whole team of the TOTEM experiment. Without them it would not have been possible to write this thesis. Let me thank in particular to the members of the software group for a constructive collaboration. Many thanks to Leszek Grzanka for the software repository maintenance. 
 
-% Munir ??
-I am grateful to Karsten Eggert, Kenneth \"Osterberg, Simone Giani, Valentina Avati and Hubert Niewiadomski for many interesting and stimulating discussions. I have learnt a lot from them. I am indebted to Valentina and Simone for reading this thesis and giving me a plenty of valuable hints.
+I am grateful to Karsten Eggert, Kenneth \"Osterberg, Simone Giani, Valentina Avati, Hubert Niewiadomski and Munir Islam for many interesting and stimulating discussions. I have learnt a lot from them. I am indebted to Valentina and Simone for reading this thesis and giving me a plenty of valuable hints.
 
 I would like to acknowledge the CERN Doctoral Student Programme and the CERN TOTEM group for supporting my research and this thesis.
 
