--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -247,7 +247,8 @@ Looking at the low-$|t|$ elastic cross-section predictions in \Fg{el mod dsdt na
 The parameterization \Eq{ext M par} is related to the hadronic amplitude $\FH$. However, the measured $t$-distribution relates to the cross-section due to both hadronic and Coulomb interactions: $\d\si^{\rm C+H}/\d t$ (see \Sc{el coulomb}). Moreover the experimental $t$-distribution is affected by the limited acceptance and detector resolution. These two effects need to be taken into account in the extrapolation procedure. Looking at the \Fg{ext C}, one may conclude that while the effect of the Coulomb interaction is important for the $1535\un{m}$ optics, it is practically negligible for the $90\un{m}$ optics (staying below $|t| \approx 0.25\un{GeV^2}$). It is the other way round for the smearing effects -- negligible for the $1535\un{m}$ and relevant for the $90\un{m}$ optics, see \Fg{ext smearing}.
 
 \def\OutlineLabel{Extrapolation for beta* = 1535 m optics}
-\block{Extrapolation for $\be^* = 1535\un{m}$ optics}
+\def\TOCLabel{Extrapolation for $\be^* = 1535$ m optics}
+\subsection{Extrapolation for $\be^* = 1535\un{m}$ optics}
 
 Since the Coulomb-interaction effects are relevant for this optics and since these effects act on the level of amplitude (not cross-section, see \Sc{el coulomb}), we need to extend the parameterization \Eq{ext M par} to include also a phase component. \Fg{el mod phase} suggests that, for $|t| \ls 0.25\un{GeV^2}$, a polynomial parameterization is adequate again. Thus, the hadronic amplitude can be parameterized as:
 \eqref{\FH(t) = \e^{M(t)} \e^{\i P(t)}\ ,\qquad M(t), P(t) \hbox{ polynomials.}}{ext MP par}
@@ -270,7 +271,8 @@ We made a number of fits, trying to find such fit settings that minimize the dev
 
 
 \def\OutlineLabel{Extrapolation for beta* = 90 m optics}
-\block{Extrapolation for $\be^* = 90\un{m}$ optics}
+\def\TOCLabel{Extrapolation for $\be^* = 90$ m optics}
+\subsection{Extrapolation for $\be^* = 90\un{m}$ optics}
 
 For the $\be^* = 90\un{m}$, the situation is quite different. The acceptance only starts at higher $|t|$ values, where the Coulomb effects can be neglected (see \Fg{ext C}). This means that it is not necessary to include a phase part of the hadronic amplitude $\FH$ as in \Eq{ext MP par} and one can use the parameterization \Eq{ext M par}. 
 
@@ -289,7 +291,7 @@ To test this extrapolation approach, we used the same (simplified) \abb{MC} simu
 
 
 
-\block{Summary}
+\subsection{Summary}
 
 The uncertainty estimates of the luminosity-independent method can be obtained by error propagation through \Eq{ttm li meth}. Taking the worst cases of the extrapolations from \Fg{ext results 1535,ext results 90} and the other parameter uncertainties from Sec.~6.3 in \bref{totem08} yields \Tb{ext error summary}.
 
