Mario's comments for Ch. 3
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5272 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1196,7 +1196,7 @@ The expected hit-distribution symmetries depend on the considered physical proce
 
 \Fg{al prof simu} shows typical hit distributions (\abb{MC} simulation) for several important forward-physics processes. Beyond the aforementioned vertical symmetry, one can immediately spot the horizontal symmetry of the green points (elastic scattering). The entire next section \Sc{al elast} will be devoted to the alignment with elastic scattering events, here let us comment on how to use this symmetry even without selecting a sample of elastic events. The ``hot spot'' close to $x\approx 0\un{mm}$ contains also a contribution from non-elastic processes with low $\xi$ (see for example the red dots -- \abb{DPE}). Due to the horizontal dispersion, these hits are shifted to the right and the symmetry is broken. This can be well seen in \Fg{al prof x dists}: the elastic peak is narrow and close to zero, but the non-elastic events form a broad structure shifted towards higher $x$ values. But what is important is that around $x=0$, the distribution is dominated by elastic events and their peak can be well fitted, as illustrated in the figure.
 
-\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions at the $220\un{m}$ stations (scoring planes at $\pm 217\un{m}$). Data from 21 September. The colorful lines represent fits of low-$\xi$ (green) and large-$\xi$ (magenta) hits.
+\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions at the $220\un{m}$ stations (scoring planes at $\pm 217\un{m}$). Data from 21 September. The colored lines represent fits of low-$\xi$ (green) and large-$\xi$ (magenta) hits.
 % analysis with vsym2 geometry
 }
 
