Mario's comments for Ch. 1 and 2
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5274 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -34,15 +34,15 @@ The definition \Eq{el t} sets bounds on the four-momentum transfer:
 \eqref{t_{\rm min} \le t \le 0\ ,\qquad t_{\rm min} = - 4p^2 \approx -s\ ,}{el t min}
 where again the high-energy approximation has been used in the last relation.
 
-The quantum theory describes particle collisions as a transition from an initial state $\ket i$ to an final state $\ket f$. The transition is reflected in the S-matrix operator $\op S$, such that the probability amplitude for the transition is given by the matrix element $\mel{f}{\op S}{i}$ (see e.g.~Sec.~4.5 in \bref{peskin} or Sec.~4.2 in \bref{formanek QM}). Were the protons spin-less particles, the above-derived kinematic parameters $s$, $t$ and $\ph$ would fully describe the initial and final states (given our choice of the \abb{CM} frame as shown in \Fg{el scat scheme}). However, since the protons carry spin $1/2$, we need to specify their spin states before and after the collision. For that purpose one traditionally uses the helicity $h$ -- the projection of spin into the momentum direction. Since proton's helicity can only have two values: $+1/2$ (will be denoted by symbol $+$) and $-1/2$ (denoted by $-$), there are $16$ spin amplitudes $\mel{s, t, \ph; h_{1'} h_{2'}}{\op S}{s; h_1, h_2}$. But if parity, time-reversal and proton-exchange invariance is assumed, only five of these amplitudes are independent (see e.g.~\bref{jacob59}). Explicit relations between the 16 amplitudes are summarized in (2.23) in \bref{bystricky78}. The five independent amplitudes are typically written in the following form (called \em{helicity amplitudes}):
+The quantum theory describes particle collisions as a transition from an initial state $\ket i$ to an final state $\ket f$. The transition is reflected in the S-matrix operator $\op S$, such that the probability amplitude for the transition is given by the matrix element $\mel{f}{\op S}{i}$ (see e.g.~Sec.~4.5 in \bref{peskin} or Sec.~4.2 in \bref{formanek QM}). Were the protons spin-less particles, the above-derived kinematic parameters $s$, $t$ and $\ph$ would fully describe the initial and final states (given our choice of the \abb{CM} frame as shown in \Fg{el scat scheme}). However, since the protons carry spin $1/2$, we need to specify their spin states before and after the collision. For that purpose one traditionally uses the helicity $h$ -- the projection of spin into the momentum direction. Since the proton's helicity can only have two values: $+1/2$ (will be denoted by symbol $+$) and $-1/2$ (denoted by $-$), there are $16$ spin amplitudes $\mel{s, t, \ph; h_{1'} h_{2'}}{\op S}{s; h_1, h_2}$. But if parity, time-reversal and proton-exchange invariance is assumed, only five of these amplitudes are independent (see e.g.~\bref{jacob59}). Explicit relations between the 16 amplitudes are summarized in (2.23) in \bref{bystricky78}. The five independent amplitudes are typically written in the following form (called \em{helicity amplitudes}):
 \eqref{\eqnarray{
 \phi_1(s, t, \ph) = \mel{++}{\op S}{++}\ ,&\quad& \phi_2(s, t, \ph) = \mel{++}{\op S}{--}\cr
 \phi_3(s, t, \ph) = \mel{+-}{\op S}{+-}\ ,&\quad& \phi_4(s, t, \ph) = \mel{+-}{\op S}{-+}\cr
 \phi_5(s, t, \ph) = \mel{++}{\op S}{+-}\ ,&\quad& \cr
 }}{el hel amp}
-where for brevity we have omitted the $s$, $t$ and $\ph$ parameters in the brakets on the \rhs
+where for brevity we have omitted the $s$, $t$ and $\ph$ parameters in the brackets on the \rhs
 
-Most often the experiments are performed with unpolarized beams and the spin characteristics of the scattered protons are not measured. Such experiments can only measure unpolarized differential cross-section (see e.g.~Sec.~D in \bref{buttimore78})
+Most often the experiments are performed with unpolarized beams and the spin characteristics of the scattered protons are not measured. Such experiments can only measure the unpolarized differential cross-section (see e.g.~Sec.~D in \bref{buttimore78})
 \eqref{{\d\si\over\d t} = {\pi\over 2sp^2} \left( |\phi_1|^2 + |\phi_2|^2 + |\phi_3|^2 + |\phi_4|^2 + 4 |\phi_5|^2 \right)\ .}{el hel dsdt}
 Note that if the beams are unpolarized, there is no preferred direction in the transverse plane of the \abb{CM} frame (plane $xy$ in \Fg{el scat scheme}) and consequently all azimuthal angles $\ph$ are equivalent. This means that, for unpolarized scattering, the $\ph$ distribution must be uniform. That is why we have not mentioned the $\ph$ dependence in \Eq{el hel dsdt}. We have neither indicated the cross-section dependence on $s$ -- this will be tacitly assumed in what follows.
 
@@ -71,7 +71,7 @@ At present, the quantum chromodynamics (\abb{QCD}) is believed to be the most ac
 
 \subsection{The model of Islam et al.}
 
-The authors picture the proton in an effective quantum-field-theory model (gauged non-linear sigma model) \bref{islam06}. They proposed a soliton solution with a mass comparable to the one of proton. This soliton divides the proton into two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \bref{islam05}, a third, the inner-most layer has been added -- a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering -- diffraction scattering ($F_{\rm D}$) originating from a glancing overlapping of the outer clouds \bref{islam84,islam87}, the core-core scattering ($F_{\rm H}$) \bref{islam06} and the valence-quark scattering ($F_{\rm Q}$) \bref{islam05,islam09}:
+The authors picture the proton in an effective quantum-field-theory model (gauged non-linear sigma model) \bref{islam06}. They proposed a soliton solution with a mass comparable to the one of the proton. This soliton divides the proton into two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \bref{islam05}, a third, the inner-most layer has been added -- a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering -- diffraction scattering ($F_{\rm D}$) originating from a glancing overlapping of the outer clouds \bref{islam84,islam87}, the core-core scattering ($F_{\rm H}$) \bref{islam06} and the valence-quark scattering ($F_{\rm Q}$) \bref{islam05,islam09}:
 \eqref{F(t) = F_{\rm D}(t) + F_{\rm H}(t) + F_{\rm Q}(t)\ .}{el is F}
 Each of the contributions drives the scattering amplitude in a range of momentum-transfer $t$. At the \abb{LHC} energies, the diffraction dominates for $|t| \ls 0.5\un{GeV^2}$, then the core-core scattering takes over, to be overruled by the valence-quark scattering at about $5\un{GeV^2}$.
 
@@ -244,7 +244,7 @@ Furthermore, the authors extend the model to $\rm\ga p$ and $\rm\ga\ga$ interact
 
 We have implemented the aforementioned models in a computer program (see the description of the Elegent package \Sc{elegent}), which allowed us to calculate predictions for the \abb{LHC} energies -- we will use values of $\sqrt s = 7$ and $14\un{TeV}$ as a representative sample.
 
-We recall that all results presented in this section are due to the strong interaction only. The influence of the electromagnetic force will only be discussed in the following section.
+We recall that all results presented in this section are due to the strong interaction only. The influence of the electromagnetic force will be discussed in \Sc{el coulomb}.
 
 The first quantity to look at is the differential cross-section. It is shown in \Fg{el mod dsdt narrow,el mod dsdt large} (narrower and larger $|t|$ range). All the predictions are very similar up to the first dip/shoulder which occurs between $|t| = 0.4$ and $0.6\un{GeV^2}$. Up to this point, the cross-section falls off almost exponentially. The first dip is very shallow in the prediction by Islam et al., for $7\un{TeV}$ it is merely a shoulder. For this model this is the only structure on the cross-section curve (for both \abb{HP} and \abb{LxG} variants). On contrary, the other models predict secondary dips/shoulders. Their size and position is often quite different for the two energies shown, especially for higher $|t|$ values. The value of the differential cross-section at the first dip differs up to a factor $10$ between the models. More precisely, the models split into two groups with a similar value of the cross-section in the first dip -- Islam et al. (both variants) and Petrov et al. with 2 pomerons (lower cross-section) and Bourrely et al., Petrov et al. (3P) and Block et al. (higher value). For a comparison to the first \abb{LHC} data see \Fg{ttm mod cmp dsdt} (in the conclusion chapter).
 
@@ -252,17 +252,17 @@ The first quantity to look at is the differential cross-section. It is shown in 
 
 \fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models, in the $|t|$ range from $0$ to $20\un{GeV^2}$.}
 
-We have already said that all models predict almost exponential decrease of the cross-section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
+We have already said that all models predict an almost exponential decrease of the cross-section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
 \eqref{B(t) = {\d\over \d t} \log {\d\si\over\d t}(t) = {\d\over \d t} \log |F(t)|^2\ .}{el B}
 Considering the total variation of the slope $B(t)$ roughly from $-10$ to $30\un{GeV^{-2}}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For a comparison to the first \abb{LHC} data see \Fg{ttm mod cmp B} (in the conclusion chapter).
 
-The exponential slope is also useful for a localization of the dips/shoulders. A dip occurs whenever the slope crosses zero value (dotted line in the \Fg{el mod B}) from positive to negative values. When the slope gets close or reaches zero but does not cross it actually (e.g.~Islam et al. at $7\un{TeV}$), it signifies a shoulder.
+The exponential slope is also useful for a localization of the dips/shoulders. A dip occurs whenever the slope crosses zero (dotted line in the \Fg{el mod B}) from positive to negative values. When the slope gets close or reaches zero but does not cross it actually (e.g.~Islam et al. at $7\un{TeV}$), it signifies a shoulder.
 
 \fig{fig/pdf/el_mod_B.pdf}{el mod B}{The elastic slope as predicted by the four models.}
 
 It is interesting to look at the phase of the amplitude ($\arg F(t)$), although it is not directly observable (except a very narrow region of very low $|t|$, where the Coulomb interference is important). The phase is plotted in \Fg{el mod phase}, a related parameter 
 \eqref{\rh(t) = {\Re F(t)\over \Im F(t)}}{el rh}
-is shown in \Fg{el mod rho}. We see that the models predict almost imaginary amplitude in the forward direction $t=0\un{GeV^2}$, which is required by the asymptotic theorems (see e.g.~Sec.~4 in \bref{kl96}). Another common feature is that the small real part of the amplitude changes sing from positive to negative in a low $|t|$ region (in our case around $|t| \approx 0.1\un{GeV^2}$), just as required by the theorem of Martin \bref{martin97}. However, there are no general requirements for the $t$-dependence of the phase further from the forward direction. In that sense, it is interesting to find a very similar behavior for most of the models. The one of Islam et al. deviates from the trend above $|t|\approx 1\un{GeV^2}$; this is the point where the diffractive component of their amplitude (qualitatively similar mechanism to the other models) starts to be dominated by the other two components that, conceptually, are quite different from the other models.
+is shown in \Fg{el mod rho}. We see that the models predict almost imaginary amplitude in the forward direction $t=0\un{GeV^2}$, which is required by the asymptotic theorems (see e.g.~Sec.~4 in \bref{kl96}). Another common feature is that the small real part of the amplitude changes sign from positive to negative in a low $|t|$ region (in our case around $|t| \approx 0.1\un{GeV^2}$), just as required by the theorem of Martin \bref{martin97}. However, there are no general requirements for the $t$-dependence of the phase further from the forward direction. In that sense, it is interesting to find a very similar behavior for most of the models. The one of Islam et al. deviates from the trend above $|t|\approx 1\un{GeV^2}$; this is the point where the diffractive component of their amplitude (qualitatively similar mechanism to the other models) starts to be dominated by the other two components that, conceptually, are quite different from the other models.
 
 \fig{fig/pdf/el_mod_phase.pdf}{el mod phase}{The elastic amplitude phase as predicted by the four models. Legend as in \Fg{el mod B}.}
 
@@ -271,7 +271,7 @@ These plots also reveal the common mechanism how the first dip appears - the ima
 
 \fig{fig/pdf/el_mod_rho.pdf}{el mod rho}{The $t$-dependence of $\rho$ as predicted by the four models. Legend as in \Fg{el mod B}.}
 
-As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sec.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents \abb{RMS} impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (\abb{RMS} of $\approx 1.4\un{fm}$) than the elastic ones (\abb{RMS} of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it rises sharply at low-$|t|$ region (see their Fig.~1) increases the \abb{RMS} value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
+As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sec.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents \abb{RMS} impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (\abb{RMS} of $\approx 1.4\un{fm}$) than the elastic ones (\abb{RMS} of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it rises sharply in the low-$|t|$ region (see their Fig.~1) increases the \abb{RMS} value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
 
 \section[el coulomb]{Coulomb interference}
 
