--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -2,7 +2,7 @@
 
 This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis. A comparison to model predictions will be shown at the end of the chapter (\Sc{felm cmp}).
 
-This analysis is based on the data from 29-30 October, when the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The vertical effective lengths in the $220\un{m}$ stations lied in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal scattering angles were reconstructed from the track angles between near and far units (see \Eq{felm xy reco}). The proportionality factors $\d L_{x}/\d z$ had values of about $0.31$. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ from the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$. The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
+This analysis is based on the data from 29-30 October, when the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The vertical effective lengths in the $220\un{m}$ stations lay in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal scattering angles were reconstructed from the track angles between near and far units (see \Eq{felm xy reco}). The proportionality factors $\d L_{x}/\d z$ had values of about $0.31$. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ to the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$. The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
 
 \fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
 
