--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -49,6 +49,19 @@
 	url				= "http://cdsweb.cern.ch/record/1103719/files/CERN-TOTEM-NOTE-2005-001.pdf"
 }
 
+@Article{ruggiero07,
+	author = "RUGGIERO, G., EREMIN, V. and NOSCHIS, E.",
+	title = "Planar edgeless silicon detectors for the TOTEM experiment",
+	journal = "Nucl. Instrum. Meth.",
+	volume = "A582",
+	number = "3",
+	pages = "854 - 857",
+	year = "2007",
+	issn = "0168-9002",
+	doi = "10.1016/j.nima.2007.07.110",
+	url = "http://www.sciencedirect.com/science/article/pii/S0168900207015872",
+}
+
 @Techreport{totem-rp-naming,
     collaboration  = "TOTEM",
 	author			= "RUGGIERO, G.",
